<resources>
    <string name="app_name">DemoApp</string>
    <string name="confirm_checkin">Confirmar participaçao no evento?</string>
    <string name="imgholder">ImgHolder</string>
    <string name="sd_event_item">SD Event item</string>
    <string name="pixabay_image">pixabay image</string>
    <string name="sd">SD</string>
    <string name="map">MAP</string>
    <string name="sdeventimage">SDEventImage</string>
    <string name="imagecheckin">ImageCheckin</string>
    <string name="imageshare">ImageShare</string>
    <string name="pixabay_gallery_item">Pixabay gallery item</string>
</resources>